tooling/nargo_cli/tests/snapshots/execute__tests__unary_operator_overloading_force_brillig_false_inliner_-9223372036854775808.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: artifact
---
{
  "noir_version": "",
  "hash": "16277429866554829027",
  "abi": {
    "parameters": [
      {
        "name": "x",
        "type": {
          "kind": "integer",
          "sign": "unsigned",
          "width": 32
        },
        "visibility": "private"
      }
    ],
    "return_type": null,
    "error_types": {
      "2920182694213909827": {
        "error_kind": "string",
        "string": "attempt to subtract with overflow"
      }
    }
  },
  "bytecode": "H4sIAAAAAAAA/81WS07DMBB17CTQIthwgS5Z+tvYOyQWnIOI9CgcgJNwIK6CBFVn0NSxIrWZVH1S9GzZenqZeXZSiQPav+cBxjWwFGNUwM/ATm+9Hzo7GGfetE19DNqHfhtNNCGGdxudG6KPXepTp5PxbjC7kNxOH0C19Hkwmmjl4NKWhRpInCjgiiwi1IIFO1PLgpapGH1JxmKfEkA9D4ZDKwIX7C4SQMxUjQVRYhxEHO83bTJTisfcv0mqNTeUSvCFsmZs7iVDyXCYLh7KBrjFgmAAGzEO5X7TJjPFHUop+ELZCL5QtszN5f4kK9JMxn4cBXHJAzOz137K5xX87iAcXu7UZwl07Q745ef79evz4ynfcwu8Al6TdcXn3a4yP8z6+kaMsS7UAYEXWS2m60fnMuOpvdWE7n1hDTUfgalffI9fknS1MrsLAAA=",
  "debug_symbols": "tZRLDoQgEETv0msWfsDfVSYTg4qGhIBBnGRivPugkYT5LXtHdVc9VtUbDKJbp1bq0SzQ3DZQpudOGu3VBsk5WmauD7U4bh00acYICD0cr2onMEoloGHJTr6stM4vK0tobL0TSBHZGSI7R2RTRDZDZBeI7BKRXSGya8zuoBYTs5npn2rSAKfZZ+J34VgREuX7H150Violpza+ZX784FbyTolLjqvuo617zmET8rM1vRhWKw7SufP4Fw==",
  "file_map": {
    "50": {
      "source": "use std::ops::{Neg, Not};\n\n// x = 3\nfn main(x: u32) {\n    let wx = Wrapper::new(x as i32);\n    let ex: i32 = 3;\n\n    assert((-wx).inner == -ex);\n    assert((!wx).inner == !ex);\n\n    // Check that it works with type variables (x's type isn't immediately known)\n    let x = 3;\n    assert(-3 == -x);\n}\n\nstruct Wrapper {\n    inner: i32,\n}\n\nimpl Wrapper {\n    fn new(inner: i32) -> Self {\n        Wrapper { inner }\n    }\n}\n\nimpl Neg for Wrapper {\n    fn neg(self) -> Wrapper {\n        Wrapper::new(-self.inner)\n    }\n}\n\nimpl Not for Wrapper {\n    fn not(self) -> Wrapper {\n        Wrapper::new(!self.inner)\n    }\n}\n",
      "path": "/Users/asterite/Projects/noir/test_programs/execution_success/unary_operator_overloading/src/main.nr"
    }
  },
  "names": [
    "main"
  ],
  "brillig_names": [
    "directive_integer_quotient"
  ]
}
