tooling/nargo_cli/tests/snapshots/execute__tests__unary_operator_overloading_force_brillig_true_inliner_9223372036854775807.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: artifact
---
{
  "noir_version": "",
  "hash": "16603751446049124442",
  "abi": {
    "parameters": [
      {
        "name": "x",
        "type": {
          "kind": "integer",
          "sign": "unsigned",
          "width": 32
        },
        "visibility": "private"
      }
    ],
    "return_type": null,
    "error_types": {
      "2920182694213909827": {
        "error_kind": "string",
        "string": "attempt to subtract with overflow"
      },
      "17843811134343075018": {
        "error_kind": "string",
        "string": "Stack too deep"
      }
    }
  },
  "bytecode": "H4sIAAAAAAAA/7VWsVLDMAx1XQUwvTLAysQGC26dErN14EdMff6OfDoXKl10OrW9a20tcir5Se9ZcbMwsy3Qg3g2Ss4evb/NNhWxvNroOaOcgN6htyy+rEjWibo18aPvd07hV7H/4BCzpT6E2QDf3yPOzzjjSy6GecqTe6b4Gtd8zijnAeO0fsK1E3tanH/D8/EvSv9Ua4VcP5iGshfJu/V5U00Q+LIm9bhWYiD4SCyNT1eZTxR87hCvY31xbam+VWK017CYhgcKntTTKriyHt/PMUHJ70T+K/ppruh2b/UOlaPl5Zn++Pzw38HocwWCF+W/CS6154XsmeEac3k26Dz5LDe6S4I1p99DrrFVNJbnwTWm/HehMbThoWpMtVZm/qaAsX79IR7vhH/NxlkH0oQbsDjP/8TnxxM89lf2WYa0KSGVtEs594ckdZqM/3fUrr+N8et7++v7IR9K7sOl+n+OGkPvCQsAAA==",
  "debug_symbols": "tZXdioUgEIDfxWsvdNTSXmVZDv3YQYgKq4UlevfVpaDtdBa8mJtoZL5vBGeYlTS2Wp4P17fDRIqPlXRDXc5u6EO0bpRU3nWdez7Ox4TFD1e/+dNY9jGc5tLPpNCMEts34UcHunWdJYVi2yclPLvL56B2gMMfgr6kSiP2VMXkVZ5jyjWm3CDKgWHKOaYcMOUCUy4x5QpTjjmhgDmhcD+hwhxyCVfCpBLizSzJ9wRPJiCZEMnEfX+q/CAy9v9DgM72VDDXhxAqSR6JLJm47yR13IrnL7fSyYRJJSRLI7YQfZXelVVn913bLn19Wr3z92gvW3j0Q22bxdu4j0+rONaWQGUeF0rsOqmpYqFGqPMD",
  "file_map": {
    "50": {
      "source": "use std::ops::{Neg, Not};\n\n// x = 3\nfn main(x: u32) {\n    let wx = Wrapper::new(x as i32);\n    let ex: i32 = 3;\n\n    assert((-wx).inner == -ex);\n    assert((!wx).inner == !ex);\n\n    // Check that it works with type variables (x's type isn't immediately known)\n    let x = 3;\n    assert(-3 == -x);\n}\n\nstruct Wrapper {\n    inner: i32,\n}\n\nimpl Wrapper {\n    fn new(inner: i32) -> Self {\n        Wrapper { inner }\n    }\n}\n\nimpl Neg for Wrapper {\n    fn neg(self) -> Wrapper {\n        Wrapper::new(-self.inner)\n    }\n}\n\nimpl Not for Wrapper {\n    fn not(self) -> Wrapper {\n        Wrapper::new(!self.inner)\n    }\n}\n",
      "path": "/Users/asterite/Projects/noir/test_programs/execution_success/unary_operator_overloading/src/main.nr"
    }
  },
  "names": [
    "main"
  ],
  "brillig_names": [
    "main"
  ]
}
